--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FOOD, LLC</title>
+    <title>LLC FOOD</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
@@ -16,10 +16,11 @@
       <div class="container">
         <div class="navbar-header">
           <a href="index.html" class="pull-left visible-md visible-lg">
+            <div id="logo-img"></div>
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>FOOD, LLC</h1></a>
+            <a href="index.html"><h1>FOOD LLC</h1></a>
           </div>
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -32,17 +33,34 @@
         
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li class="visible-xs active">
-              <a href="index.html">
-               
-<div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#Chicken">Chicken</a>
-  <a href="#Beef">Beef</a>
-  <a href="#Sushi">Sushi</a>
-</div>
+            <li>
+              <a href="menu-categories.html">
+                <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
+            </li>
+            </li>
+          </ul><!-- #nav-list -->
+        </div><!-- .collapse .navbar-collapse -->
+      </div><!-- .container -->
+    </nav><!-- #header-nav -->
+  </header>
 
-<div class="col-lg-4 col-md-6 col-sm-12">
+  <div id="call-btn" class="visible-xs">
+    <a class="btn" href="tel:410-602-5008">
+    <span class="glyphicon glyphicon-earphone"></span>
+    410-602-5008
+    </a>
+  </div>
+  <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
+
+  <div id="main-content" class="container">
+    <body>
+    <h1>Our Menu</h1>
+    </body>
+     <div class="col-lg-4 col-md-6 col-sm-12">
       <div class="box">
         <p class="content-name name1">Chicken</p>
         <p class="content">
@@ -80,6 +98,8 @@
         </p>
       </div>
     </div>
+     </div>
 
-</body>
-</html>
+
+
+   
